scrollbar: fix add panel height bug

--- a/public/sass/components/_panel_add_panel.scss
+++ b/public/sass/components/_panel_add_panel.scss
@@ -1,3 +1,7 @@
+.add-panel-container {
+  height: 100%;
+}
+
 .add-panel {
   height: 100%;
 
